# dyniec.gitub.io

./: .gitignore  LICENSE  README.md  about.md  default.nix  dybiec-info.cabal  flake.nix  index.html  index.md  pdybiec.cabal  site.hs  stack.yaml
css/: base.css  base.css~  default.css
static/: dyniec.asc
templates/: default.html
