cabal-version:      3.4
name:               dybiec-info
version:            0.1.0.0
build-type:         Simple
license:            BSD-3-Clause
license-file:		LICENSE
description:
  My website
homepage:           https://git.dybiec.info/website

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.15
  ghc-options:      -threaded
